docs(testing): 完善自动化测试最佳实践文档
- 添加测试框架架构说明,包括技术栈和模块结构
- 详细描述测试基类体系(BaseTest、BaseServiceTest、BaseControllerTest)
- 新增TestConfig测试配置类和TestDataBuilder测试数据构造器
- 补充单元测试实践指南,涵盖JUnit 5注解和断言方法
- 增加Service层和Controller层测试示例
- 添加集成测试实践内容,包括业务接口和缓存测试
- 提供完整的测试代码示例和配置说明
- 规范测试数据生成和性能监控机制
- 完善MockMvc和Forest客户端集成测试说明
- 增加测试目录管理和自动清理机制说明